Remove java9+ maven profile
Since the baseline is now Java 11 in which
--illegal-access=permit is the default [1],
this profile is not necessary anymore.

[1]: https://docs.oracle.com/en/java/javase/11/tools/java.html#GUID-3B1CE181-CD30-4178-9602-230B800D4FAE__GUID-5D972434-DC15-4D1D-8473-56085896D5F2